theme and header change_20221203

--- a/sections/custom-header.liquid
+++ b/sections/custom-header.liquid
@@ -155,12 +155,12 @@
       },
       {
         "type": "range",
-        "id": "height",
-        "default": 6,
-        "label": "文字幅",
-        "min": 0,
-        "max": 20,
-        "step": 2,
+        "id": "image_width",
+        "default": 120,
+        "label": "画像の大きさ",
+        "min": 120,
+        "max": 200,
+        "step": 20,
         "unit": "px"
       },
       {
@@ -168,17 +168,6 @@
       "id": "background-color",
       "label": "背景色",
       "default": "#ffffff"
-      },
-      {
-        "type": "color",
-        "id": "font-color",
-        "label": "文字色",
-        "default": "#000000"
-      },
-      {
-      "type": "url",
-      "id": "link",
-      "label": "URL"
       }
     ]
   }
