--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,64 +1,8 @@
 
-<body>
 
-  <section class="slider">
-    
-    <ul class="slider-wrap">
-      <li class="slider-item01 slider-item">
-        <div class="copy_area">
-        </div>
-      </li>
-      <li class="slider-item02 slider-item">
-        <div class="copy_area">
-        </div>
-      </li>
-      <li class="slider-item03 slider-item">
-        <div class="copy_area">
-        </div>
-      </li>
-      <li class="slider-item04 slider-item">
-        <div class="copy_area">
-        </div>
-      </li>
-    </ul>
+{% section 'custom-slideshow' %} <!-- スライドショーの読み込み -->
 
-  </section>
-
-  <section class="2022_new_collection sec">
-    <h2>2022 NEW COLLECTION "APPLAUSE"</h2>
-    <div class="collection-wrap flex">
-      <a href="#" class="product_card">
-        <img src="img/new/product-2.webp" alt="">
-        <h3>商品3</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-2.webp" alt="">
-        <h3>商品3</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-2.webp" alt="">
-        <h3>商品3</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-2.webp" alt="">
-        <h3>商品3</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-
-    </div>
-
-    <a href="#" class="Btn02 bgleft02"><span>もっと見る</span></a>
-
-  </section>
-
-  
+{% section 'custom-collection' %} <!-- コレクションの読み込み -->
 
   <section class="sec sec03">
     <h2>土曜限定販売の大人気商品</h2>
