--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -6,57 +6,7 @@
 
 {% section 'custom-section-product' %} <!-- セクションの商品の読み込み -->
 
-
-
-  <section class="sec04 sec">
-    <div class="items-wrapper flex">
-      <a href="product.html" class="item">
-        <div class="item__content">
-          <h3>NEW COLLECTION</h3>
-          <div class="Btn bgleft bgleft03">
-            <span>もっと見る</span>
-          </div>
-        </div>
-      </a>
-
-      <a href="product.html" class="item">
-        <div class="item__content">
-          <h3>NEW COLLECTION</h3>
-          <div class="Btn bgleft bgleft03">
-            <span>もっと見る</span>
-          </div>
-        </div>
-      </a>
-
-      <a href="product.html" class="item">
-        <div class="item__content">
-          <h3>NEW COLLECTION</h3>
-          <div class="Btn bgleft bgleft03">
-            <span>もっと見る</span>
-          </div>
-        </div>
-      </a>
-
-      <a href="product.html" class="item">
-        <div class="item__content">
-          <h3>NEW COLLECTION</h3>
-          <div class="Btn bgleft bgleft03">
-            <span>もっと見る</span>
-          </div>
-        </div>
-      </a>
-
-      <a href="product.html" class="item">
-        <div class="item__content">
-          <h3>NEW COLLECTION</h3>
-          <div class="Btn bgleft bgleft03">
-            <span>もっと見る</span>
-          </div>
-        </div>
-      </a>
-
-    </div>
-  </section>
+{% section 'custom-collection-list' %} <!-- セクション一覧の読み込み -->
 
 
   <section class="sec05 sec">
