--- a/sections/custom-collection-list.liquid
+++ b/sections/custom-collection-list.liquid
@@ -3,11 +3,11 @@
     <div class="items-wrapper flex">
         {% for block in section.blocks %}
             {% assign collection = block.settings.toppage_collection %}
-            <a href="{{ collection.url }}" class="item collection-item" style="background-image: url( {{ collection.image | image_url }} );" >
+            <a href="{{ collection.url }}" class="item" style="background-image: url( {{ collection.image | image_url }} );" >
                 <div class="item__content">
-                    <h3>NEW COLLECTION</h3>
-                    <div class="Btn bgleft bgleft03">
-                        <span>もっと見る</span>
+                    <h3 class="item__content-text" > {{ block.settings.toppage_text }} </h3>
+                    <div class="Btn-top bgleft bgleft03 collection-btn "  style=" border:2px solid #fff; ">
+                        <span style=" font-weight: bold; color: white; " >もっと見る</span>
                     </div>
                 </div>
             </a>
@@ -60,15 +60,62 @@
     </div>
   </section>
 
+  {% assign count = count | plus:1 %}
 
   <style>
-    .collection-item{
-        position: absolute;
-        top:50%;
-        left:50%;
-        transform: translate(-50%,-50%);
+
+    .item__content{
+        {% if block.settings.bold-text %}
+            font-weight : bold;
+        {% endif %}
+        font-size: {{ block.settings.font-size }}px;
+        color: {{ block.settings.font-color }};
+      }
+
+    .item__content-text{
+        font-weight: bold;
+        color: white;
+        font-size: 30px;
+        margin-bottom: 10px;
     }
 
+      .Btn-top {
+        border: rgba(147, 147, 147, 0.3) solid 1px;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        display: block;
+        text-align: center;
+        font-size: 1.2vw;
+        width: 100%;
+        padding: 15px 20px;
+        margin: 0 auto;
+        position: relative;
+        overflow: hidden;
+        -webkit-transition: ease .2s;
+        transition: ease .2s;
+      }
+      
+      .Btn-top span {
+        position: relative;
+        z-index: 3;
+        /*z-indexの数値をあげて文字を背景よりも手前に表示*/
+        color: #939393;
+        -webkit-transition: ease .4s;
+        transition: ease .4s;
+      }
+      
+      .Btn-top:hover span {
+        color: #000;
+      }
+
+    {% comment %} .collection-text-{{ count }}{
+        {% if block.settings.bold-text %}
+            font-weight : bold;
+        {% endif %}
+        font-size: {{ block.settings.font-size }}px;
+        padding: {{ block.settings.height }}px 0;
+        color: {{ block.settings.font-color }};
+    } {% endcomment %}
 
   </style>
 
@@ -88,7 +135,35 @@
           "type": "collection",
           "id": "toppage_collection",
           "label": "コレクションリスト"
-        }
+        },
+        {
+            "type" : "text",
+            "id" : "toppage_text",
+            "default": "NEW COLLECTIOM",
+            "label" : "テキスト"
+          },
+          {
+            "type": "checkbox",
+            "id": "bold-text",
+            "default": false,
+            "label": "太文字"
+          },
+          {
+            "type": "range",
+            "id": "font-size",
+            "default": 14,
+            "label": "文字の大きさ",
+            "min": 12,
+            "max": 20,
+            "step": 1,
+            "unit": "px"
+          },
+          {
+            "type": "color",
+            "id": "font-color",
+            "label": "文字色",
+            "default": "#000000"
+          }
       ]
     }
   ]
