2022/12/07 プロダクトページ修正

--- a/assets/style.css
+++ b/assets/style.css
@@ -1848,7 +1848,7 @@ header {
 }
 
 .product .sec03 .share {
-  margin: 18px 0 21px 0;
+  margin: 40px 0px 20px;
 }
 
 .product .sec03 .product__wrap label {
