--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -2,16 +2,16 @@
 
 {% section 'custom-slideshow' %} <!-- スライドショーの読み込み -->
 
-{% section 'custom-collection' %} <!-- コレクションの読み込み -->
+{% section 'custom-collection' %} <!-- 商品一覧の読み込み -->
 
-{% section 'custom-section-product' %} <!-- セクションの商品の読み込み -->
+{% section 'custom-section-product' %} <!-- 商品単体の読み込み -->
 
 {% section 'custom-collection-list' %} <!-- セクション一覧の読み込み -->
 
 {% section 'custom-section-about' %} <!-- セクションアバウトの読み込み -->
 
-{% section 'custom-section-content' %} <!-- セクションアバウトの読み込み -->
+{% section 'custom-section-content' %} <!-- セクションコンテントの読み込み -->
 
-{% section 'custom-section-category' %} <!-- セクションアバウトの読み込み -->
+{% section 'custom-section-category' %} <!-- セクションカテゴリーの読み込み -->
 
 
