12/8_追加・修正

--- a/sections/custom-collection.liquid
+++ b/sections/custom-collection.liquid
@@ -44,9 +44,11 @@
 
     </div>
 
-    <a href="#" class="Btn02 bgleft02"><span>もっと見る</span></a>
+    <a href=" {{ collection.url }} " class="Btn02 bgleft02"><span>もっと見る</span></a>
 
   </section>
+
+  {% render 'newly-viewed.liquid' %}
 
 
   <style>
