--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -306,5 +306,16 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     {{ 'script.js' | asset_url | script_tag }}
+
+    {% if template contains 'product' %}
+
+      {{ '//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js' | script_tag }}
+      {{ 'jquery.products.min.js' | asset_url | script_tag }}
+
+      <script>
+      Shopify.Products.recordRecentlyViewed();
+      </script>
+
+      {% endif %}
   </body>
 </html>
