--- a/sections/custom-announcement-bar.liquid
+++ b/sections/custom-announcement-bar.liquid
@@ -18,6 +18,9 @@
     <style>
       .custom-announcement-bar-{{ count }}{
         text-align: center;
+        {% comment %} z-index: 150; {% endcomment %}
+        {% comment %} position: fixed; {% endcomment %}
+        {% comment %} width: 100%; {% endcomment %}
       }
 
       .custom-announcement-bar__link{
