--- a/sections/custom-collection-list.liquid
+++ b/sections/custom-collection-list.liquid
@@ -1,5 +1,6 @@
 
-<section class="sec04 sec">
+<section class="sec04 sec" data-aos="fade-up"
+  data-aos-duration="2000">
     <div class="items-wrapper flex">
         {% for block in section.blocks %}
             {% assign collection = block.settings.toppage_collection %}
