--- a/sections/custom-section-about.liquid
+++ b/sections/custom-section-about.liquid
@@ -18,7 +18,7 @@
     .sec05 .bkimg__contents-customize {
         background-image:url('{{ section.settings.content-img | img_url: '4000x'}}');
         background-attachment: fixed;
-        background-size: 100%;
+        background-size: cover;
         background-position: center;
         height: 800px;
         -webkit-box-align: center;
