collection.liquid 修正　12/11

--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -2,107 +2,40 @@
 <section class="2022_new_collection sec"
   data-aos="zoom-out"
   data-aos-duration="3000">
-  <h2 class= " collection-top-title " > {{ section.settings.collection_title }} </h2>
-    <div class="collection-wrap flex">
-      {% paginate collection.products by 8 %}
-        {% for product in collection.products %}
-          <!-- within | collection を追加することで、コレクション内の製品のプロダクトを出力してくれる -->
-        <a href=" product.url | within: collection  " class="product_card">
-          <img src=" {{ product.featured_image.src | img_url: 'large' }} " alt="">
-          <h3> {{ product.title }} </h3>
-          <p class="price"> {{ product.price | money }} </p>
-          <p class="Btn bgleft"><span>詳細を見る</span></p>
-        </a>
-        {% else %}
-        <p>お探しの商品が見つかりませんでした。</p>
-        {% endfor %}
-    </div>
 
-    <!-- 次のページの案内 -->
-      {% if paginate.pages > 1 %}
-        <nav aria-label="Page navigation example" class="paginte_nav"  >
-          {{ paginate | default_pagination: next: '»', previous: '«' }}
-        </nav>
-      {% endif %}
-      {% endpaginate %}
+  <h2>新着商品</h2>
 
-      <div class="product_card"></div>
-
-
-    {% comment %} <div class="collections__wrap flex">
-      <div class="category__choice-wrap">
-        <div class="category__choice">
-          <p class="headline">フィルター</p>
-          <ul class="categories">
-            <li><a href="#">カテゴリメニュー</a></li>
-            <li><a href="#">カテゴリメニュー</a></li>
-            <li><a href="#">カテゴリメニュー</a></li>
-            <li><a href="#">カテゴリメニュー</a></li>
-          </ul>
-        </div>
-      </div> {% endcomment %}
-
-      {% comment %} <a href="#" class="product_card">
-        <img src="img/new/product-3.webp" alt="">
-        <h3>商品３</h3>
-        <p class="price">¥2,592</p>
+  <div class="collection-wrap flex">
+    {% paginate collection.products by 8 %}
+      {% for product in collection.products %}
+        <!-- within | collection を追加することで、コレクション内の製品のプロダクトを出力してくれる -->
+      <a href=" product.url | within: collection  " class="product_card">
+        <img src=" {{ product.featured_image.src | img_url: 'large' }} " alt="">
+        <h3> {{ product.title }} </h3>
+        <p class="price"> {{ product.price | money }} </p>
         <p class="Btn bgleft"><span>詳細を見る</span></p>
       </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-3.webp" alt="">
-        <h3>商品３</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-3.webp" alt="">
-        <h3>商品３</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-3.webp" alt="">
-        <h3>商品３</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-3.webp" alt="">
-        <h3>商品３</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-3.webp" alt="">
-        <h3>商品３</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-3.webp" alt="">
-        <h3>商品３</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-3.webp" alt="">
-        <h3>商品３</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a>
-      <a href="#" class="product_card">
-        <img src="img/new/product-3.webp" alt="">
-        <h3>商品３</h3>
-        <p class="price">¥2,592</p>
-        <p class="Btn bgleft"><span>詳細を見る</span></p>
-      </a> {% endcomment %}
-
-
+      {% else %}
+      <p>お探しの商品が見つかりませんでした。</p>
+      {% endfor %}
   </div>
+
+  <!-- 次のページの案内 -->
+  {% if paginate.pages > 1 %}
+    <nav aria-label="Page navigation example" class="paginte_nav"  >
+      {{ paginate | default_pagination: next: '»', previous: '«' }}
+    </nav>
+  {% endif %}
+  {% endpaginate %}
+
+  <div class="product_card"></div>
 
 </section>
 
-  <style>
+{% section 'custom-collection-list' %} <!-- セクション一覧の読み込み -->
+
+
+<style>
   .paginte_nav{
   display: flex;
   justify-content: center;
@@ -114,32 +47,5 @@
     font-size: 25px;
     border: #E0E0E0 2px solid;
   }
+</style>
 
-  @media screen and (max-width: 480px) {
-    .paginte_nav span{
-      font-size: 15px;
-    }
-  }
-
-  .collection-top-title{
-    font-weight: {{section.settings.collection_bold_text}};
-    font-size: {{ section.settings.collection_font_size }}px;
-  }
-
-
-  </style>
-
-
-  {% schema %}
-    {
-      "name": "コレクション商品ページ",
-      "settings": [
-        {
-          "type": "text",
-          "id": "collection_title",
-          "label": "テキストを入力する",
-          "default": " "
-        }
-      ]
-    }
-  {% endschema %}
