--- a/assets/style.css
+++ b/assets/style.css
@@ -1880,6 +1880,8 @@ header {
   color: #000;
 }
 
+
+
 .product .sec03 .alert {
   margin-top: 5px;
 }
@@ -1887,6 +1889,7 @@ header {
 .product .sec03 .alert span {
   color: #5BAE50;
 }
+
 
 .product .sec03 .product__post {
   max-width: calc(100% - 500px);
@@ -1916,8 +1919,8 @@ header {
 }
 
 .product .sec03 .product__detail__stickey {
-  position: sticky;
-  position: -webkit-sticky;
+  /* position: sticky;
+  position: -webkit-sticky; */
   top: 20px;
 }
 
@@ -2230,3 +2233,68 @@ footer .footer__inner {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+
+
+/* ===============================================
+// Reveal module(商品ホバーCSS )
+// =============================================== */
+
+.reveal .hidden {
+  display: block !important;
+  visibility: visible !important;
+}
+
+.product:hover .reveal img {
+  opacity: 1;
+}
+
+.reveal {
+  position: relative;
+}
+
+.reveal .hidden {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.reveal:hover .hidden {
+  z-index: 100000;
+  opacity: 1;
+}
+
+.reveal .caption {
+  position: absolute;
+  top: 0;
+  display: table;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  /* fallback for IE8 */
+  background-color: rgba(255, 255, 255, 0.7);
+  font: 13px/1.6 sans-serif;
+  text-transform: uppercase;
+  color: #333;
+  letter-spacing: 1px;
+  text-align: center;
+  text-rendering: optimizeLegibility;
+}
+
+.reveal .hidden .caption .centered {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+@media (min-width: 480px) and (max-width: 979px) {
+  .reveal .caption {
+    font-size: 11px;
+  }
+}
